# usagbi

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md
core/: CMakeLists.txt  bus.cpp  bus.h  common.h  cpu.cpp  cpu.h  emulator.cpp  emulator.h  rom.cpp  rom.h
scripts/: cpu_instr_test.bat
tests/: CMakeLists.txt
tests/cpu_instructions/: CMakeLists.txt  cpu_instructions_tests.cpp
usagbi/: CMakeLists.txt  usagbi.cpp  usagbi.h
utils/: CMakeLists.txt  logger.cpp  logger.h
